# sanic-security

./: .gitignore
example_api/: Makefile  README.md  api.py  cert.pem  index.html  key.pem  pyproject.toml  trust_self_signed_cert
sanic-security/: README.md  setup.cfg
sanic-security/sanic_security/: __init__.py  core.py
sanic-security/sanic_security/middleware/: double_submit_cookie.py  hsts.py  origin_check.py  rate_limit.py  request_id.py
