[tool.poetry]
name = "sanic-security"
version = "0.1.0"
description = ""
authors = ["Dino Hensen <dino.hensen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^20.12.1"
sanic-prometheus = "^0.2.1"
uvicorn = "^0.13.3"


[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
