[metadata]
name = sanic_security
version = 0.0.1
url = https://github.com/dhensen/sanic-security
author = Dino Hensen
author_email = dino.hensen@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Implements basic API security based on OWASP recommendations
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
packages = find:
